# free-for-dev

./: .gitignore  .index.html.swp  .index_BASE_1595.html.swp  .index_LOCAL_1595.html.swp  .index_REMOTE_1595.html.swp  .ruby-version  .travis.yml  1  1.txt  123.txt  2  3  321.txt  AGENTS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Colors UI  -  Design and UI  Dev02hello.txt  Dev02moto.txt  Dev02world.txt  Developer.ga  Hello2.txt  INDEX.md~7a9bff57770fc4649ed03ae1d0cc697b3db79982  LICENSE  RAEDME.md  README-zh.md  README.md  README_BACKUP_5940.md  README_BASE_5940.md  README_LOCAL_5940.md  bf.txt  brf1.txt  brf2.txt  build.sh  chhotu.txt  cld01.txt  cld02.txt  cld03.txt  (+48 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/action-scripts/: lint.sh
.github/workflows/: awesomebot.yml  generate-json.yml  lint.yml  main.yml  mergemsg.yml  prohibited.yml  triage.yml  verify.yml  welcome.yml
https/github.com/googlecodelabs/: workbox-lab.git
i18n/: zh-cn_20250712.md
verify/: Cargo.toml
verify/src/: main.rs  markdown.rs  networking.rs
