[package]
name = "verify"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
memchr = "2.7.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12.25", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset"
] }

